fix the hero height on mobile

--- a/style.css
+++ b/style.css
@@ -795,7 +795,7 @@ footer #copyright {
         line-height: 2.5rem;
     }
     #hero {
-        height: 600px;
+        height: 450px;
         background-position: top 25% right 45%;
     }
     .products .all-products-cards {
